Updated YAML file

--- a/.github/workflows/pretty.yml
+++ b/.github/workflows/pretty.yml
@@ -3,11 +3,11 @@ on: [push, pull_request]
 jobs:
   build:
     name: Build
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     steps:
     - name: Check out code
       uses: actions/checkout@v2
-      
+
     - name: Install useful utilities
       run: sudo apt-get install -y tree
 
@@ -17,7 +17,7 @@ jobs:
         if [ -f "$FILE" ]; then
             echo "File "$FILE" exists."
             exit 0
-        else 
+        else
             echo "File $FILE does not exist."
             exit 1
         fi
